--- a/Responsive Login Page/index.html
+++ b/Responsive Login Page/index.html
@@ -72,7 +72,7 @@
             if (username === "Matthew" && password === "Jesslyn") {
                 window.location.href = "https://ceced20.github.io/WizardShakes/index1.html"; // Redirect to Jesslyn.html
             } else if (username === "Ceced" && password === "admin") {
-                window.location.href = "https://ceced20.github.io/WizardShakes/index1.html"; // Redirect to Ceced.html
+                window.location.href = "https://ceced20.github.io/FlappyDunk/"; // Redirect to Ceced.html
             } else {
                 var errorMessage = document.createElement("p");
                 errorMessage.textContent = "Invalid username or password.";
