--- a/Responsive Login Page/index.html
+++ b/Responsive Login Page/index.html
@@ -70,7 +70,7 @@
             var password = document.getElementById("password").value;
 
             if (username === "Matthew" && password === "Jesslyn") {
-                window.location.href = "https://ceced20.github.io/WizardShakes/index1.html"; // Redirect to Jesslyn.html
+                window.location.href = https://ceced20.github.io/WizardShakes/"; // Redirect to Jesslyn.html
             } else if (username === "Ceced" && password === "admin") {
                 window.location.href = "https://ceced20.github.io/FlappyDunk/"; // Redirect to Ceced.html
             } else {
